2012-03-27  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* CMakeLists.txt (v0.1.3):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.h
	(v0.2.1):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.txx
	(v0.2.1):

	- Suggestion by Bradley Lowekamp to replace my new preprocessor
	macro ITK3 by the standard ITK_VERSION_MAJOR.

	* CMakeLists.txt (v0.1.2):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.h
	(v0.2.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.txx
	(v0.2.0):
	* matlab/ItkToolbox/ItkPSTransform.cpp (v0.3.0):

	- Enable compilation with ITK v4.x.

2012-03-26  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/test/test_itk_imfilter.m (v0.1.0):

	- Add Script to test the filters provided by itk_imfilter (code
	for the moment only for "advess" filter).

	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.txx:
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.txx:

	- Comment out standard output messages. In Matlab, these are not
	seen until the algorithm finishes, so they don't help to know how
	the algorithm progresses.

	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.7):

	- Accept .mhd extension for MetaImage format.

	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.txx:

	- Fix bug. Wrong #define label for debug function.

	* matlab/ItkToolbox/MexAnisotropicDiffusionVesselEnhancementImageFilter.hpp
	(v0.1.2):
	* matlab/ItkToolbox/MexAnisotropicDiffusionVesselEnhancementImageFilter.cpp
	(v0.1.2):

	- Add missing user-provided input parameters: NUMITERATIONS,
	WSTRENGTH, SENSITIVITY, TIMESTEP, EPSILON.
